// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/InputField Default 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#EEEEEE",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-evenly",
      "padding": 40,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderColor": "#ff9345",
        "borderRadius": 2048,
        "borderWidth": 2,
        "flexDirection": "row",
        "padding": 2,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="sentences"
      autoCorrect={true}
      autoFocus={false}
      caretHidden={false}
      dataDetectorTypes="all"
      defaultValue=""
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onChange={[Function]}
      onEndEditing={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      placeholder=""
      rejectResponderTermination={true}
      secureTextEntry={false}
      spellCheck={true}
      style={
        Object {
          "color": "#ff9345",
          "flex": 1,
          "fontSize": 16,
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`Storyshots Atoms/InputField Fill 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#EEEEEE",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-evenly",
      "padding": 40,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ff9345",
        "borderRadius": 2048,
        "flexDirection": "row",
        "padding": 2,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="sentences"
      autoCorrect={true}
      autoFocus={false}
      caretHidden={false}
      dataDetectorTypes="all"
      defaultValue=""
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onChange={[Function]}
      onEndEditing={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      placeholder=""
      rejectResponderTermination={true}
      secureTextEntry={false}
      spellCheck={true}
      style={
        Object {
          "color": "#EEEEEE",
          "flex": 1,
          "fontSize": 16,
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`Storyshots Atoms/InputField Input Variation 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#EEEEEE",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-evenly",
      "padding": 40,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderColor": "#ff9345",
        "borderRadius": 2048,
        "borderWidth": 2,
        "flexDirection": "row",
        "padding": 2,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="sentences"
      autoCorrect={true}
      autoFocus={false}
      caretHidden={false}
      dataDetectorTypes="all"
      defaultValue=""
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onChange={[Function]}
      onEndEditing={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      placeholder=""
      rejectResponderTermination={true}
      secureTextEntry={false}
      spellCheck={true}
      style={
        Object {
          "color": "#ff9345",
          "flex": 1,
          "fontSize": 16,
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`Storyshots Atoms/InputField Underline 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#EEEEEE",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-evenly",
      "padding": 40,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomWidth": 2,
        "borderColor": "#ff9345",
        "borderRadius": 0,
        "flexDirection": "row",
        "padding": 2,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="sentences"
      autoCorrect={true}
      autoFocus={false}
      caretHidden={false}
      dataDetectorTypes="all"
      defaultValue=""
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onChange={[Function]}
      onEndEditing={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      placeholder=""
      rejectResponderTermination={true}
      secureTextEntry={false}
      spellCheck={true}
      style={
        Object {
          "color": "#ff9345",
          "flex": 1,
          "fontSize": 16,
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;
